# MMCTester

./: .gitignore  README.md  default.nix  flake.nix  setup.cfg  setup.py
mmctester/: arduino.py  commandstester.py  interface.py  led.py  main.py  tui.py  util.py
mmctester-board/: commands.cpp  commands.h  mmctester-board.ino  utils.cpp  utils.h
mmctester-board/tests/: Arduino.cpp  Arduino.h  Makefile  minunit.h  test_commands.cpp  test_utils.cpp
