[metadata]
name = mmctester
description = Test utility for MMC development
license = Apache License 2.0
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = False
install_requires =
    pyserial
    python-ipmi

[options.packages.find]
exclude = mmctester-board

[options.entry_points]
console_scripts =
    mmctester = mmctester.main:main
